return boot_modif_position

--- a/position/position_1.html
+++ b/position/position_1.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=oUrtYx_6UJcliefOi4xKjDn8LlKNjaT7PXUawBUptIrY9aAtwv--1EyHXnhPHhk2wrh76PMHxQ4JRDDI3xBgrA" charset="UTF-8"></script>
     <style>
         body {
-            background: url(/img/more.jpg) 100% 100% no-repeat;
+            background: url(img/more.jpg) 100% 100% no-repeat;
             background-size: cover;
             height: 100vh;
             margin: 0;
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <img src="/img/airplane.png" id="airplane" alt="">;
+    <img src="img/airplane.png" id="airplane" alt="">;
 
     <script>
         let airplane = document.getElementById("airplane");
